<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context="com.dewnaveen.texteditor.ui.about.AboutActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/material_layout_button_padding">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ToolbarStyle"
                app:titleTextColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_component_grid_lists_padding_small"
                android:background="@color/light_gray" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/material_component_grid_lists_padding_big"
                            android:layout_marginRight="@dimen/material_component_grid_lists_padding_big"
                            android:layout_marginTop="@dimen/nav_drawer_margin"
                            android:orientation="horizontal"
                            app:cardCornerRadius="@dimen/material_component_grid_lists_padding_big"
                            app:cardElevation="@dimen/tab_space_plus1"
                            app:cardPreventCornerOverlap="true"
                            app:cardUseCompatPadding="false">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/material_component_dialogs_elevation">


                                <TextView
                                    android:id="@+id/item_txt_abt_hdr"
                                    style="@style/TextStyle.Normal.Bold"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:lineSpacingExtra="@dimen/material_component_cards_space_between_cards"
                                    android:paddingTop="@dimen/material_component_cards_space_between_cards"
                                    android:text="@string/about_me_hfr"
                                    android:textColor="@color/colorAccent" />

                                <TextView
                                    android:id="@+id/item_txt_abt"
                                    style="@style/TextStyle.XSmall.Regular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/item_txt_abt_hdr"
                                    android:gravity="center"
                                    android:lineSpacingExtra="@dimen/material_component_grid_lists_padding_big"
                                    android:paddingBottom="@dimen/material_component_cards_space_between_cards"
                                    android:paddingLeft="@dimen/material_component_cards_space_between_cards"
                                    android:paddingRight="@dimen/material_component_cards_space_between_cards"
                                    android:text="@string/about_me"
                                    android:textColor="@color/colorPrimary" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/material_component_grid_lists_padding_small"
                                    android:layout_alignParentBottom="true"
                                    android:background="@color/colorAccent" />
                            </RelativeLayout>


                        </android.support.v7.widget.CardView>


                        <com.dewnaveen.texteditor.ui.custom.RoundedImageView
                            android:id="@+id/iv_profile_pic"
                            android:layout_width="@dimen/nav_profile_height"
                            android:layout_height="@dimen/nav_profile_height"
                            android:layout_centerHorizontal="true"
                            android:elevation="@dimen/material_layout_button_padding"
                            android:padding="@dimen/tab_space_top"
                            android:scaleType="fitCenter"
                            android:src="@drawable/profile_pic" />


                    </RelativeLayout>


                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/material_component_bottom_sheet_edge_left_right_margins"
                        android:layout_marginLeft="@dimen/material_component_grid_lists_padding_big"
                        android:layout_marginRight="@dimen/material_component_grid_lists_padding_big"
                        android:layout_marginTop="@dimen/material_component_bottom_sheet_edge_left_right_margins"
                        android:orientation="horizontal"
                        app:cardCornerRadius="@dimen/material_component_grid_lists_padding_big"
                        app:cardElevation="@dimen/tab_space_plus1"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="false">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/material_component_cards_space_between_cards">


                            <TextView
                                android:id="@+id/item_txt_proflie_hdr"
                                style="@style/TextStyle.Normal.Bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:lineSpacingExtra="@dimen/material_component_cards_space_between_cards"
                                android:text="@string/profile_highlights"
                                android:textColor="@color/colorAccent" />

                            <TextView
                                android:id="@+id/item_txt_proflie_abt"
                                style="@style/TextStyle.XSmall.Regular"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/item_txt_proflie_hdr"
                                android:gravity="start"
                                android:lineSpacingExtra="@dimen/material_component_grid_lists_padding_big"
                                android:paddingBottom="@dimen/material_component_cards_space_between_cards"
                                android:paddingLeft="@dimen/material_component_cards_space_between_cards"
                                android:paddingRight="@dimen/material_component_cards_space_between_cards"
                                android:text="@string/about_me_profile"
                                android:textColor="@color/colorPrimary" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/material_component_grid_lists_padding_small"
                                android:layout_alignParentBottom="true"
                                android:background="@color/colorAccent" />
                        </RelativeLayout>


                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </ScrollView>


        </RelativeLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>






